# src/core/constants/users-router.path.ts
@@ -1,6 +1,5 @@
 export const USER_ROUTE = {
   USERS: "/users",
   ROOT: "/",
-  LOGIN: "/login",
   BY_ID: "/:id",
 };
